external-crates/move/crates/move-compiler/tests/move_2024/matching/raw_address_invalid.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04007]: incompatible types
   ┌─ tests/move_2024/matching/raw_address_invalid.move:10:9
   │
 7 │ public fun match_e(e: &E, rx: &u64, ry: &u64): (&u64, &u64) {
   │                        - Expected: '0x42::m::E'
   ·
10 │         0x42 => (rx, ry),
   │         ^^^^
   │         │
   │         Invalid pattern
   │         Given: integer

error[E03006]: unexpected name in this position
   ┌─ tests/move_2024/matching/raw_address_invalid.move:11:9
   │
11 │         0x42::m => (rx, ry),
   │         ^^^^^^^ Unexpected module identifier. A module identifier is not a valid pattern constructor
